--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "primereact": "^10.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-sparklines": "^1.7.0",
     "ssh2-promise": "^1.0.3"
   },
