--- a/package.json
+++ b/package.json
@@ -10,25 +10,27 @@
     "dist": "npm run build && electron-builder"
   },
   "build": {
-    "appId": "com.nodeterm.app",
+    "appId": "com.electron.nodeterm",
     "productName": "NodeTerm",
-    "directories": {
-      "output": "release"
-    },
+    "files": [
+      "dist/",
+      "node_modules/",
+      "main.js",
+      "preload.js",
+      "package.json"
+    ],
     "win": {
-      "icon": "src/assets/icon.ico",
       "target": "nsis"
     },
-    "mac": {
-      "target": "dmg"
+    "nsis": {
+      "oneClick": true,
+      "perMachine": false
     },
-    "linux": {
-      "target": "deb"
-    },
-    "files": [
-      "**/*",
-      "!node_modules/cpu-features/**"
-    ]
+    "publish": {
+      "provider": "github",
+      "owner": "kalidus",
+      "repo": "NodeTerm"
+    }
   },
   "keywords": [],
   "author": "",
@@ -51,7 +53,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "ssh2-promise": "^1.0.3"
+    "ssh2-promise": "^1.0.3",
+    "node-ssh": "^13.2.0",
+    "xterm": "^5.3.0",
+    "xterm-addon-fit": "^0.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.23.6",
