Implement comprehensive versioning system
 Features:
- Add AboutDialog component with app info and tech details
- Show version in status bar with hover effects
- Webpack integration for version injection from package.json
- npm scripts for semantic versioning (patch/minor/major)
- Professional UI with distribution icons and feature highlights

 Components:
- AboutDialog: Complete app information modal
- StatusBar: Version display with professional styling
- webpack.config: DefinePlugin for environment variables

 Version Management:
- Updated to v1.1.0
- Added .version file for detailed changelog tracking
- npm scripts: version:patch, version:minor, version:major
- README updated with comprehensive documentation

 UI Improvements:
- Status bar justify-space-between layout
- Version section with opacity transitions
- Professional about dialog with technical specs
- App version prominent display in status bar

--- a/package.json
+++ b/package.json
@@ -1,13 +1,17 @@
 {
   "name": "NodeTerm",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "main.js",
   "scripts": {
     "start": "electron .",
     "build": "webpack --mode production",
     "dev": "concurrently \"webpack --watch --mode development\" \"electron .\"",
     "pack": "npm run build && electron-builder --dir",
-    "dist": "npm run build && electron-builder"
+    "dist": "npm run build && electron-builder",
+    "version:patch": "npm version patch --no-git-tag-version",
+    "version:minor": "npm version minor --no-git-tag-version",
+    "version:major": "npm version major --no-git-tag-version",
+    "version:build": "npm run build && npm run pack"
   },
   "build": {
     "appId": "com.electron.nodeterm",
