--- a/package.json
+++ b/package.json
@@ -67,13 +67,19 @@
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
     "babel-loader": "^9.1.3",
+    "buffer": "^6.0.3",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^13.0.0",
+    "crypto-browserify": "^3.12.1",
     "css-loader": "^6.8.1",
     "electron": "^28.2.0",
     "electron-builder": "^24.9.1",
     "electron-reloader": "^1.2.3",
     "html-webpack-plugin": "^5.6.3",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "process": "^0.11.10",
+    "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
