--- a/package.json
+++ b/package.json
@@ -79,8 +79,11 @@
     "os-browserify": "^0.3.0",
     "path-browserify": "^1.0.1",
     "process": "^0.11.10",
+    "querystring-es3": "^0.2.1",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.3",
+    "url": "^0.11.4",
+    "util": "^0.12.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
