--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "concurrently \"webpack --watch --mode development\" \"electron .\"",
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && electron-builder",
+    "dist:linux": "npm run build && electron-builder --linux",
     "version:patch": "npm version patch --no-git-tag-version",
     "version:minor": "npm version minor --no-git-tag-version",
     "version:major": "npm version major --no-git-tag-version",
@@ -18,6 +19,7 @@
     "productName": "NodeTerm",
     "files": [
       "dist/",
+      "src/components/",
       "node_modules/",
       "main.js",
       "preload.js",
@@ -25,6 +27,10 @@
     ],
     "win": {
       "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage",
+      "category": "Utility"
     },
     "nsis": {
       "oneClick": true,
