feat: sección mac para build de macOSX

--- a/package.json
+++ b/package.json
@@ -42,6 +42,10 @@
       "provider": "github",
       "owner": "kalidus",
       "repo": "NodeTerm"
+    },
+    "mac": {
+      "target": "dmg",
+      "icon": "build/icons/512x512.png"
     }
   },
   "keywords": [],
