--- a/package.json
+++ b/package.json
@@ -27,12 +27,12 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "build/icons/512x512.png"
+      "icon": "src/assets/app-icon.png"
     },
     "linux": {
       "target": "AppImage",
       "category": "Utility",
-      "icon": "build/icons"
+      "icon": "src/assets"
     },
     "nsis": {
       "oneClick": true,
@@ -45,7 +45,7 @@
     },
     "mac": {
       "target": "dmg",
-      "icon": "build/icons/512x512.png"
+      "icon": "src/assets/app-icon.png"
     }
   },
   "keywords": [],
