--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "ssh2-promise": "^1.0.3",
+    "ssh2-sftp-client": "^12.0.1",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
