--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@types/react-resizable": "^3.0.8",
     "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
     "@xterm/addon-image": "^0.8.0",
@@ -63,6 +64,9 @@
     "@xterm/addon-web-links": "^0.11.0",
     "@xterm/addon-webgl": "^0.18.0",
     "@xterm/xterm": "^5.5.0",
+    "assert": "^2.1.0",
+    "browserify-zlib": "^0.2.0",
+    "https-browserify": "^1.0.0",
     "node-ssh": "^13.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
@@ -70,9 +74,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
-    "react-split-pane": "^0.1.92",
+    "react-resizable": "^3.0.5",
+    "react-split": "^2.0.14",
     "ssh2-promise": "^1.0.3",
     "ssh2-sftp-client": "^12.0.1",
+    "stream-http": "^3.2.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
