docs: enlace directo a la release v1.3.1 en el README y actualización de package.json

--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "linux": {
       "target": "AppImage",
       "category": "Utility",
-      "icon": "src/assets"
+      "icon": "src/assets/app-icon.png"
     },
     "nsis": {
       "oneClick": true,
