--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
     "https-browserify": "^1.0.0",
+    "node-pty": "^1.1.0-beta34",
     "node-ssh": "^13.2.0",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
