--- a/package.json
+++ b/package.json
@@ -80,6 +80,7 @@
     "ssh2-promise": "^1.0.3",
     "ssh2-sftp-client": "^12.0.1",
     "stream-http": "^3.2.0",
+    "systeminformation": "^5.27.7",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
