fix: incluye system-stats-worker.js en el build de electron-builder para Windows

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
       "node_modules/",
       "main.js",
       "preload.js",
+      "system-stats-worker.js",
       "package.json"
     ],
     "win": {
