--- a/package.json
+++ b/package.json
@@ -67,6 +67,8 @@
     "@xterm/xterm": "^5.5.0",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
+    "guacamole-common-js": "^1.5.0",
+    "guacamole-lite": "^1.0.2",
     "https-browserify": "^1.0.0",
     "node-pty": "^1.1.0-beta34",
     "node-ssh": "^13.2.1",
@@ -82,6 +84,8 @@
     "ssh2-sftp-client": "^12.0.1",
     "stream-http": "^3.2.0",
     "systeminformation": "^5.27.7",
+    "unzipper": "^0.12.3",
+    "ws": "^8.18.0",
     "xterm": "^5.3.0",
     "xterm-addon-fit": "^0.8.0"
   },
