--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "webpack --mode production",
     "dev": "concurrently \"webpack --watch --mode development\" \"electron .\"",
     "pack": "npm run build && electron-builder --dir",
-    "dist": "npm run build && electron-builder",
+    "dist": "npm run build && npm prune --omit=optional --no-audit --no-fund && electron-builder",
     "dist:linux": "npm run build && electron-builder --linux",
     "version:patch": "npm version patch --no-git-tag-version",
     "version:minor": "npm version minor --no-git-tag-version",
