FIX package.json para incluir bien RDPmanager

--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "files": [
       "dist/",
       "src/components/",
+      "src/utils/",
+      "src/services/",
       "node_modules/",
       "main.js",
       "preload.js",
