Añadido WSL como metod de instalacion de Guacamole y con mock te avisa de que hace falta un mentdo docker o WSL

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "productName": "NodeTerm",
     "files": [
       "dist/",
+      "binaries/**",
       "src/components/",
       "src/utils/",
       "src/services/",
@@ -27,6 +28,9 @@
       "preload.js",
       "system-stats-worker.js",
       "package.json"
+    ],
+    "asarUnpack": [
+      "binaries/**"
     ],
     "win": {
       "target": "nsis",
