--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
       "package.json"
     ],
     "asarUnpack": [
-      "binaries/**"
+      "binaries/**",
+      "node_modules/ssh2-promise/**",
+      "node_modules/ssh2/**"
     ],
     "win": {
       "target": "nsis",
@@ -48,11 +50,21 @@
     "publish": {
       "provider": "github",
       "owner": "kalidus",
-      "repo": "NodeTerm"                                    
+      "repo": "NodeTerm"
     },
     "mac": {
-      "target": "dmg",
-      "icon": "src/assets/app-icon.png"
+      "target": [
+        {
+          "target": "dmg",
+          "arch": ["x64", "arm64"]
+        },
+        {
+          "target": "dir",
+          "arch": ["x64", "arm64"]
+        }
+      ],
+      "icon": "src/assets/app-icon.png",
+      "category": "public.app-category.utilities"
     }
   },
   "keywords": [],
@@ -105,6 +117,7 @@
     "copy-webpack-plugin": "^13.0.0",
     "crypto-browserify": "^3.12.1",
     "css-loader": "^6.8.1",
+    "dmg-license": "^1.0.11",
     "electron": "^28.2.0",
     "electron-builder": "^24.9.1",
     "electron-reloader": "^1.2.3",
