--- a/package.json
+++ b/package.json
@@ -117,7 +117,6 @@
     "copy-webpack-plugin": "^13.0.0",
     "crypto-browserify": "^3.12.1",
     "css-loader": "^6.8.1",
-    "dmg-license": "^1.0.11",
     "electron": "^28.2.0",
     "electron-builder": "^24.9.1",
     "electron-reloader": "^1.2.3",
@@ -132,6 +131,9 @@
     "util": "^0.12.5",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
+  },
+  "optionalDependencies": {
+    "dmg-license": "^1.0.11"
   },
   "overrides": {
     "ssh2": "1.16.0"
