--- a/package.json
+++ b/package.json
@@ -56,11 +56,17 @@
       "target": [
         {
           "target": "dmg",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         },
         {
           "target": "dir",
-          "arch": ["x64", "arm64"]
+          "arch": [
+            "x64",
+            "arm64"
+          ]
         }
       ],
       "icon": "src/assets/app-icon.png",
@@ -111,14 +117,15 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
+    "@electron/rebuild": "^3.7.2",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^13.0.0",
     "crypto-browserify": "^3.12.1",
     "css-loader": "^6.8.1",
-    "electron": "^28.2.0",
-    "electron-builder": "^24.9.1",
+    "electron": "^38.1.2",
+    "electron-builder": "^26.0.12",
     "electron-reloader": "^1.2.3",
     "html-webpack-plugin": "^5.6.3",
     "os-browserify": "^0.3.0",
