feat: actualizar Electron a v38.1.2 y Node.js a v22.19.0
- Actualizar Electron de 28.3.3 a 38.1.2 (+10 versiones principales)
- Actualizar electron-builder de 24.13.3 a 26.0.12
- Actualizar Node.js a 22.19.0 (versión recomendada para Electron 38)
- Corregir configuración de empaquetado para incluir src/** completo
- Recompilar módulos nativos (node-pty, ssh2) para compatibilidad
- Mejorar seguridad y rendimiento con versiones más recientes
- Preparar build de distribución con instalador NSIS

--- a/package.json
+++ b/package.json
@@ -20,9 +20,7 @@
     "files": [
       "dist/",
       "binaries/**",
-      "src/components/",
-      "src/utils/",
-      "src/services/",
+      "src/**",
       "node_modules/",
       "main.js",
       "preload.js",
@@ -117,7 +115,6 @@
     "@babel/core": "^7.23.6",
     "@babel/preset-env": "^7.23.6",
     "@babel/preset-react": "^7.23.3",
-    "@electron/rebuild": "^3.7.2",
     "babel-loader": "^9.1.3",
     "buffer": "^6.0.3",
     "concurrently": "^8.2.2",
