--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "electron .",
     "build": "webpack --mode production",
-    "dev": "concurrently \"webpack --watch --mode development\" \"electron .\"",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation concurrently \"webpack --watch --mode development\" \"electron .\"",
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && npm prune --omit=optional --no-audit --no-fund && electron-builder",
     "dist:linux": "npm run build && electron-builder --linux",
@@ -119,6 +119,7 @@
     "buffer": "^6.0.3",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^13.0.0",
+    "cross-env": "^10.0.0",
     "crypto-browserify": "^3.12.1",
     "css-loader": "^6.8.1",
     "electron": "^38.1.2",
