--- a/package.json
+++ b/package.json
@@ -14,19 +14,26 @@
     "version:major": "npm version major --no-git-tag-version",
     "version:build": "npm run build && npm run pack"
   },
-  "build": {
-    "appId": "com.electron.nodeterm",
-    "productName": "NodeTerm",
-    "files": [
-      "dist/",
-      "binaries/**",
-      "src/**",
-      "node_modules/",
-      "main.js",
-      "preload.js",
-      "system-stats-worker.js",
-      "package.json"
-    ],
+    "build": {
+      "appId": "com.electron.nodeterm",
+      "productName": "NodeTerm",
+      "files": [
+        "dist/",
+        "binaries/**",
+        "src/**",
+        "node_modules/",
+        "main.js",
+        "preload.js",
+        "system-stats-worker.js",
+        "package.json"
+      ],
+      "extraResources": [
+        {
+          "from": "resources/cygwin64",
+          "to": "cygwin64",
+          "filter": ["**/*"]
+        }
+      ],
     "asarUnpack": [
       "binaries/**",
       "node_modules/ssh2-promise/**",
