--- a/package.json
+++ b/package.json
@@ -99,12 +99,15 @@
     "@xterm/xterm": "^5.5.0",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
+    "dompurify": "^3.3.0",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.6.2",
     "guacamole-common-js": "^1.5.0",
     "guacamole-lite": "^1.0.2",
+    "highlight.js": "^11.11.1",
     "https-browserify": "^1.0.0",
     "kdbxweb": "^2.1.1",
+    "marked": "^16.4.1",
     "node-pty": "^1.1.0-beta34",
     "node-ssh": "^13.2.1",
     "primeflex": "^3.3.1",
