--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "marked": "^16.4.1",
     "node-pty": "^1.1.0-beta34",
     "node-ssh": "^13.2.1",
+    "pdf-parse": "^2.4.5",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primereact": "^10.2.1",
