--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@mozilla/readability": "^0.6.0",
     "@types/react-resizable": "^3.0.8",
     "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
@@ -106,6 +107,7 @@
     "guacamole-lite": "^1.0.2",
     "highlight.js": "^11.11.1",
     "https-browserify": "^1.0.0",
+    "jsdom": "^27.1.0",
     "kdbxweb": "^2.1.1",
     "marked": "^16.4.1",
     "node-pty": "^1.1.0-beta34",
@@ -124,6 +126,7 @@
     "ssh2-sftp-client": "^12.0.1",
     "stream-http": "^3.2.0",
     "systeminformation": "^5.27.7",
+    "turndown": "^7.2.2",
     "unzipper": "^0.12.3",
     "ws": "^8.18.0",
     "xterm": "^5.3.0",
