FIX JSDOM POLIFLY IN COMPILATION

--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mozilla/readability": "^0.6.0",
+    "@napi-rs/canvas": "^0.1.82",
     "@types/react-resizable": "^3.0.8",
     "@xterm/addon-clipboard": "^0.1.0",
     "@xterm/addon-fit": "^0.10.0",
@@ -100,6 +101,7 @@
     "@xterm/xterm": "^5.5.0",
     "assert": "^2.1.0",
     "browserify-zlib": "^0.2.0",
+    "dommatrix": "^0.1.1",
     "dompurify": "^3.3.0",
     "electron-log": "^5.4.3",
     "electron-updater": "^6.6.2",
