--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && npm prune --omit=optional --no-audit --no-fund && electron-builder",
     "dist:linux": "npm run build && electron-builder --linux",
+    "scan:virustotal": "node scripts/virustotal-scan.js",
+    "dist:scan": "npm run dist && npm run scan:virustotal",
     "version:patch": "npm version patch --no-git-tag-version",
     "version:minor": "npm version minor --no-git-tag-version",
     "version:major": "npm version major --no-git-tag-version",
