mejora en el tamaño del instalador y portable, reduccion al quitar dev tools

--- a/package.json
+++ b/package.json
@@ -59,7 +59,33 @@
       "!**/tsconfig.json",
       "!**/jest.config.*",
       "!**/.travis.yml",
-      "!**/.circleci/**"
+      "!**/.circleci/**",
+      "!node_modules/electron/**",
+      "!node_modules/electron-builder/**",
+      "!node_modules/app-builder-bin/**",
+      "!node_modules/@electron/**",
+      "!node_modules/@types/**",
+      "!node_modules/@babel/**",
+      "!node_modules/webpack/**",
+      "!node_modules/webpack-cli/**",
+      "!node_modules/babel-loader/**",
+      "!node_modules/copy-webpack-plugin/**",
+      "!node_modules/html-webpack-plugin/**",
+      "!node_modules/css-loader/**",
+      "!node_modules/style-loader/**",
+      "!node_modules/concurrently/**",
+      "!node_modules/cross-env/**",
+      "!node_modules/electron-reloader/**",
+      "!node_modules/baseline-browser-mapping/**",
+      "!node_modules/buffer/**",
+      "!node_modules/os-browserify/**",
+      "!node_modules/path-browserify/**",
+      "!node_modules/process/**",
+      "!node_modules/querystring-es3/**",
+      "!node_modules/stream-browserify/**",
+      "!node_modules/url/**",
+      "!node_modules/util/**",
+      "!node_modules/crypto-browserify/**"
     ],
     "asarUnpack": [
       "binaries/**",
@@ -82,6 +108,7 @@
       "verifyUpdateCodeSignature": false,
       "requestedExecutionLevel": "asInvoker"
     },
+    "electronLanguages": ["en", "es"],
     "nsis": {
       "oneClick": true,
       "perMachine": false,
