Quick initial app with info

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "electron .",
     "download-fonts": "node scripts/download-fonts.js",
     "build": "npm run download-fonts && webpack --mode production",
-    "dev": "cross-env NODE_OPTIONS=--no-deprecation concurrently \"webpack --watch --mode development\" \"electron .\"",
+    "dev": "cross-env NODE_OPTIONS=--no-deprecation concurrently \"webpack --watch --mode development\" \"wait-on dist/index.html -t 60000 && electron .\"",
     "pack": "npm run build && electron-builder --dir",
     "dist": "npm run build && npm prune --omit=optional --no-audit --no-fund && electron-builder",
     "dist:linux": "npm run build && electron-builder --linux",
@@ -75,6 +75,7 @@
       "!node_modules/style-loader/**",
       "!node_modules/concurrently/**",
       "!node_modules/cross-env/**",
+      "!node_modules/wait-on/**",
       "!node_modules/electron-reloader/**",
       "!node_modules/baseline-browser-mapping/**",
       "!node_modules/buffer/**",
@@ -217,6 +218,7 @@
     "buffer": "^6.0.3",
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^13.0.0",
+    "wait-on": "^8.0.1",
     "cross-env": "^10.0.0",
     "crypto-browserify": "^3.5.1",
     "css-loader": "^6.8.1",
