Quick initial app with info v3

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
+    "start:cold": "node -e \"try{require('fs').rmSync('.cold-cache',{recursive:true,force:true})}catch(e){}\" && electron . --user-data-dir=.cold-cache",
     "download-fonts": "node scripts/download-fonts.js",
     "build": "npm run download-fonts && webpack --mode production",
     "dev": "cross-env NODE_OPTIONS=--no-deprecation concurrently \"webpack --watch --mode development\" \"wait-on dist/index.html -t 60000 && electron .\"",
