--- a/package.json
+++ b/package.json
@@ -221,9 +221,10 @@
     "concurrently": "^8.2.2",
     "copy-webpack-plugin": "^13.0.0",
     "cross-env": "^10.0.0",
-    "crypto-browserify": "^3.12.1",
+    "crypto-browserify": "^3.3.0",
     "css-loader": "^6.8.1",
     "electron": "^38.1.2",
+    "@electron/rebuild": "^4.0.3",
     "electron-builder": "^26.4.0",
     "electron-reloader": "^1.2.3",
     "html-webpack-plugin": "^5.6.3",
@@ -244,7 +245,7 @@
   },
   "overrides": {
     "ssh2": "1.17.0",
-    "tar": "7.5.6",
+    "tar": "7.5.7",
     "elliptic": "6.6.1"
   }
 }
