script releasev1.7 fix draf and lastest

--- a/package.json
+++ b/package.json
@@ -137,7 +137,8 @@
     "publish": {
       "provider": "github",
       "owner": "kalidus",
-      "repo": "NodeTerm"
+      "repo": "NodeTerm",
+      "releaseType": "release"
     },
     "mac": {
       "target": [
