--- a/package.json
+++ b/package.json
@@ -184,7 +184,7 @@
     "dommatrix": "^0.1.1",
     "dompurify": "^3.3.0",
     "electron-log": "^5.4.3",
-    "electron-updater": "^6.6.2",
+    "electron-updater": "^6.8.3",
     "guacamole-common-js": "^1.5.0",
     "guacamole-lite": "^1.0.2",
     "highlight.js": "^11.11.1",
@@ -251,6 +251,10 @@
     "ajv": "^8.18.0",
     "ajv-keywords": "^5.1.0",
     "@electron/asar": "^4.0.1",
-    "glob": "^13.0.5"
+    "glob": "^13.0.5",
+    "rimraf": "^6.1.3",
+    "@xmldom/xmldom": "^0.8.11",
+    "boolean": "^3.2.0",
+    "lodash.isequal": "^4.5.0"
   }
 }
